--- a/index1.html
+++ b/index1.html
@@ -290,6 +290,15 @@
             .modal-content {
                 width: 95%;
             }
+            .icon-btn-text {
+                display: none;
+            }
+            .icon-btn svg {
+                display: block;
+            }
+            .header-btn {
+                padding: 0.5rem;
+            }
         }
 
     </style>
@@ -301,9 +310,19 @@
                 <a href="index.html" class="apple-btn py-2 px-4 rounded-full">← Back to Dashboard</a>
                 <h1 class="text-3xl sm:text-4xl font-semibold text-header tracking-tight">Study Planner</h1>
             </div>
-            <div class="flex items-center gap-2">
-                <button onclick="openImportExportModal()" class="apple-btn text-sm">Import/Export</button>
-                <button onclick="showConfirmationModal('Are you sure you want to reset all data?', resetData)" class="danger-btn text-sm">Reset Data</button>
+            <div class="flex items-center gap-2 flex-wrap justify-end">
+                <button onclick="openImportExportModal()" class="apple-btn text-sm header-btn flex items-center gap-1">
+                    <span class="icon-btn-text">Import/Export</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 sm:w-4 sm:h-4">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M12 9.75v6.75m0 0l-3-3m3 3l3-3m-8.25 6h10.5a2.25 2.25 0 002.25-2.25v-2.25a.75.75 0 00-.75-.75H16.5m-8.25-6h10.5a2.25 2.25 0 012.25 2.25v2.25a.75.75 0 01-.75.75H16.5m-8.25-6H12a.75.75 0 010 1.5h-.75V7.5a.75.75 0 011.5 0V9h3.75V7.5a.75.75 0 011.5 0V9h.75a.75.75 0 010 1.5H12a.75.75 0 010-1.5H8.25z" />
+                    </svg>
+                </button>
+                <button onclick="showConfirmationModal('Are you sure you want to reset all data?', resetData)" class="danger-btn text-sm header-btn flex items-center gap-1">
+                    <span class="icon-btn-text">Reset Data</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 sm:w-4 sm:h-4">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.942a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.166m-1.022.165L7.545 19.673a2.25 2.25 0 002.244 2.077h7.248a2.25 2.25 0 002.244-2.077L19.56 5.79" />
+                    </svg>
+                </button>
             </div>
         </header>
 
@@ -334,7 +353,7 @@
                 <button onclick="prevDay()" class="apple-btn py-1 px-2 text-sm" aria-label="Previous day">←</button>
                 <button onclick="nextDay()" class="apple-btn py-1 px-2 text-sm" aria-label="Next day">→</button>
                 <button onclick="refreshToToday()" class="apple-btn py-1 px-2 text-sm" aria-label="Go to today's date">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-4 h-4" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004 12m0 8h5.812A8.001 8.001 0 0020 12m-8-2v4m0 0l2 2m-2-2L8 14" />
                     </svg>
                 </button>
@@ -344,10 +363,30 @@
                     <option value="durationMinutes">Sort by Duration</option>
                     <option value="createdAt">Sort by Recently Added</option>
                 </select>
-                <button onclick="openCardModal()" class="pro-btn text-sm">Add Card</button>
-                <button onclick="openAITipsModal()" class="apple-btn text-sm">Get AI Study Tips</button>
-                <button onclick="openAIAnalysisModal()" class="apple-btn text-sm">Get AI Progress Analysis</button>
-                <button onclick="openProgressAnalysisModal()" class="apple-btn text-sm">Progress Charts</button>
+                <button onclick="openCardModal()" class="pro-btn text-sm flex items-center gap-1">
+                    <span class="icon-btn-text">Add Card</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 sm:w-4 sm:h-4">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                </button>
+                <button onclick="openAITipsModal()" class="apple-btn text-sm flex items-center gap-1">
+                    <span class="icon-btn-text">AI Tips</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 sm:w-4 sm:h-4">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M12 18.75a6 6 0 006-6v-1.5m-6 7.5a6 6 0 01-6-6v-1.5m6 7.5v3.75m-3.75 0h7.5M12 15.75a3 3 0 01-3-3V4.5a3 3 0 116 0v8.25a3 3 0 01-3 3z" />
+                    </svg>
+                </button>
+                <button onclick="openAIAnalysisModal()" class="apple-btn text-sm flex items-center gap-1">
+                    <span class="icon-btn-text">AI Analysis</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 sm:w-4 sm:h-4">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3 13.5l5.5-5.5m0 0l5.5 5.5m-5.5-5.5v9m-4.5 2h14a2 2 0 002-2V7.5a2 2 0 00-2-2h-14a2 2 0 00-2 2v9a2 2 0 002 2z" />
+                    </svg>
+                </button>
+                <button onclick="openProgressAnalysisModal()" class="apple-btn text-sm flex items-center gap-1">
+                    <span class="icon-btn-text">Charts</span>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 sm:w-4 sm:h-4">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3 13.5L13.5 3m0 0L19.5 9.5m-6 6L3 19.5" />
+                    </svg>
+                </button>
             </div>
         </section>
         
@@ -453,21 +492,7 @@
                 <button onclick="closeModal('ai-analysis-modal')" class="secondary-btn">Close</button>
             </div>
         </dialog>
-
-        <!-- New AI Plan Modal -->
-        <dialog id="ai-plan-modal" class="glass-card modal-content w-11/12 md:w-1/2 max-w-xl">
-            <div class="flex justify-between items-center mb-4">
-                <h2 class="text-2xl font-bold text-[--accent-color]">AI Study Plan</h2>
-                <button type="button" onclick="closeModal('ai-plan-modal')" class="text-gray-400 hover:text-white text-3xl">&times;</button>
-            </div>
-            <div id="ai-plan-content">
-                <p class="text-secondary text-center">Creating a study plan...</p>
-            </div>
-            <div class="mt-4 flex justify-end">
-                <button onclick="closeModal('ai-plan-modal')" class="secondary-btn">Close</button>
-            </div>
-        </dialog>
-
+        
         <!-- Progress Analysis Modal -->
         <dialog id="progress-analysis-modal" class="glass-card modal-content w-11/12 md:w-3/4 max-w-4xl">
             <div class="flex justify-between items-center mb-4">
@@ -484,12 +509,12 @@
                     <canvas id="weekly-progress-chart" class="w-full h-64"></canvas>
                 </div>
                 <div>
-                    <h3 class="text-lg font-semibold mb-2">Monthly Progress (Last 6 Months)</h3>
-                    <canvas id="monthly-progress-chart" class="w-full h-64"></canvas>
-                </div>
-                <div>
                     <h3 class="text-lg font-semibold mb-2">Total Cards Breakdown</h3>
                     <canvas id="total-cards-chart" class="w-full h-64"></canvas>
+                </div>
+                <div>
+                    <h3 class="text-lg font-semibold mb-2">Monthly Progress (Last 6 Months)</h3>
+                    <canvas id="monthly-progress-chart" class="w-full h-64"></canvas>
                 </div>
             </div>
         </dialog>
@@ -883,7 +908,7 @@
                     <label class="study-card-checklist-item">
                         <input type="checkbox" ${item.done ? 'checked' : ''} onchange="toggleChecklistItem('${key}', '${card.id}', ${index})" class="hidden">
                         <span class="w-4 h-4 rounded-full border border-white flex items-center justify-center transition-colors ${item.done ? 'bg-green-500' : ''}">
-                           ${item.done ? '<svg class="w-3 h-3 text-white" fill="currentColor" viewBox="0 0 20 20"><path d="M16.704 4.153a.5.5 0 01.144.65l-6 11a.5.5 0 01-.898.156l-3.5-3.5a.5.5 0 01.707-.707L10.5 14.5l5.147-9.347a.5.5 0 01.707-.153z" clip-rule="evenodd" fill-rule="evenodd"></path></svg>' : ''}
+                            ${item.done ? '<svg class="w-3 h-3 text-white" fill="currentColor" viewBox="0 0 20 20"><path d="M16.704 4.153a.5.5 0 01.144.65l-6 11a.5.5 0 01-.898.156l-3.5-3.5a.5.5 0 01.707-.707L10.5 14.5l5.147-9.347a.5.5 0 01.707-.153z" clip-rule="evenodd" fill-rule="evenodd"></path></svg>' : ''}
                         </span>
                         <span class="text-sm ${item.done ? 'line-through text-secondary' : ''}">${escapeHtml(item.text)}</span>
                     </label>
@@ -1267,7 +1292,7 @@
          * Renders the monthly progress chart for the last 6 months.
          */
         function renderMonthlyProgressChart() {
-             const canvas = document.getElementById('monthly-progress-chart');
+              const canvas = document.getElementById('monthly-progress-chart');
             const ctx = canvas.getContext('2d');
             canvas.width = canvas.offsetWidth;
             canvas.height = canvas.offsetHeight;
@@ -1475,6 +1500,7 @@
             const container = document.getElementById('checklist-container');
             const itemDiv = document.createElement('div');
             itemDiv.className = 'flex items-center gap-2';
+            // The remove button now simply removes the DOM element. The form submission logic handles state.
             itemDiv.innerHTML = `
                 <input type="text" placeholder="New checklist item" class="pro-input flex-grow text-sm">
                 <button type="button" onclick="this.closest('div').remove()" class="danger-btn text-xs py-1 px-2">&times;</button>
